# MacKV-Opt

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BENCHMARK.md  GITHUB_REPOSITORY_METADATA.md  MAC_VALIDATION_CHECKLIST.md  PAPER_PLAN.md  REAL_MAC_EXPERIMENT_CHECKLIST.md
mackv_opt/: __init__.py  baseline.py  baseline_summary.py  bench.py  capabilities.py  cli.py  collect.py  compare.py  doctor.py  experiment.py  models.py  ollama.py  planner.py  plot.py  profiler.py  quality.py  report.py  rq1.py  stability.py  stats.py  units.py
scripts/: run_macos_matrix.sh  sync_github_metadata.py
tests/: test_baseline_summary.py  test_bench.py  test_capabilities.py  test_ci.py  test_cli.py  test_collect.py  test_compare.py  test_docs.py  test_doctor.py  test_experiment.py  test_ollama.py  test_planner.py  test_plot.py  test_profiler.py  test_quality.py  test_report.py  test_rq1.py  test_scripts.py  test_stability.py  test_stats.py  test_units.py
