[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mackv-opt"
version = "0.1.0"
description = "KV cache and context planner for Mac local LLM inference."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "MacKV-Opt contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
mackv-opt = "mackv_opt.cli:main"

[tool.setuptools.packages.find]
include = ["mackv_opt*"]
exclude = ["work*", "outputs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
